docker-images/greenit-server/deploiement/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-it-server
  namespace: devops-namespace
  annotations:
    owner: Henri-Frank
  labels:
    app: green-it-server
    code-composant: xx666
    sous-composant: green-it-server
spec:
  selector:
    app: green-it-server
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
